package it.unibo.oop.hearthcode.view.api;

/**
 * Identifiers of the application scenes.
 */
public enum SceneId {

    MAIN_MENU,

    MATCH,

    END_MATCH,

    DATABASE

}
